# PiPicoW_CMongoose_HotWaterTimer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mongoose.cmake  picoOnboardNVS.cmake
port/mongoose/: mongoose_config.h
src/: CMakeLists.txt  NVSAgent.cpp  NVSAgent.h  NVSOnboard.cpp  files.cmake  fs.c  main.cpp  main.h
web/: heating.js  index.html
